Changes for 1.0:

 - fixed sql statement in trigger definition form (Alexei)
 - changed all versions from 1.0beta14 to 1.0 (Alexei)
 - converted redhat scripts from DOS to UNIX format (Alexei)

Changes for 1.0beta14:

 - added DB patches for migration to 1.0beta14 (Alexei)
 - changed logic of actions: scope=1 (triggerid=hostid), 2 (triggerid=0) (Alexei)
 - fixed compilation of --with-pgsql on non-GCC platforms (Alexei)
 - fixed refresh in actions screen (Alexei) 
 - show severity of triggers in the list (Alexei)
 - fixed trigger update. Value of the trigger sets to UNKNOWN. (Alexei)
 - fixed --with-[net|ucd]-snmp to work with various paths (Alexei)
 - changed css.css to follow W3C standard (Alexei)
 - changed DB schema. Dropped foreign key for table actions (Alexei)
 - fixed handling of special chars in adding from templates (Alexei)
 - fixed output of special characters in maps (Alexei)
 - fixed permission check for screens (Alexei)
 - delete sysmap information on host removal (Alexei)
 - fixed compilation of the agent under HP-UX (Alexei)
 - fixed simple checks to return NOTSUPPORTED (Alexei)
 - removed primary keys for both 'history' and 'history_str' (Alexei)
 - added support for system[proccount] under FreeBSD (Alexei)
 - remove trailing zeroes in function evaluation routines (Alexei)
 - added support for proc_cnt[*] under FreeBSD (Alexei)
 - special processing of unit 's' (Alexei)
 - added W32 install floppy. Thanks to  Fabricio Ferrari. (Alexei)
 - new action type: "ON or OFF" (Alexei)
 - added support of macro {STATUS} (Alexei)
 - pinger to work for all hosts (ip and hostname-based) (Alexei)
 - fixed memory[cached] to work for both linux 2.4 and 2.6 (Alexei)
 - do not link crypt and crypto to the agent (Alexei)
 - fixed report1.php to work under FreeBSD (Alexei)
 - fixed displaying of string value in the Latest Values (Alexei)
 - fixed simple check when port specified. Order of IP and PORT is
 arbitrary now (Alexei)